# .dotfiles

./: .Xresources  .clang-format  .gdbinit  .gitignore  .gitmodules  .i3blocks.conf  .profile  .stowrc  .tmux.conf  .vimrc  .xinitrc  .xprofile  .zprofile  .zshrc  Makefile  README.md  alacritty.toml  compile_commands.json  config.def.h  flake.nix  fuzzel.ini  hyprland.conf  install.sh  lfrc  links.sh  mimeapps.list  mpv.conf  tmux.conf  treefmt.nix  zathurarc
.config/: mimeapps.list  picom.conf  starship.toml  user-dirs.dirs
.i3/: i3-autoname-workspaces.py  lock.sh  samedir.sh
.zsh/: prompt.zsh  zsh_aliases
bootstrap/: action.c  action.h  bootstrap.c  lx_process.h  utils.c  utils.h
dwm/: config.h
extra/: ansi.md  aur-packages  bootstrap.sh  dev-packages  dwm.config.h  gtk-packages  iwd.sh  makefile.md  notes.md  npm.sh  packages  repos.md  server.md  setup-zsh.sh  terminal.sh  usb.md  wayland-packages  x11-packages  zsh.sh
git/: .gitconfig  .gitignore_global  config  ignore
home/: default.nix
home-manager/: dmenu.nix  firefox.nix  git.nix  gtk.nix  home.nix  hyprland.nix  imv.nix  lf.nix  mpv.nix  onedarker.yaml  qutebrowser.nix  sh.nix  starship.nix  stylix.nix  xmonad.nix  zathura.nix
i3/: .i3blocks.conf
installer/: installer  installer.c  installer.h
lazygit/: config.yml
nix/: configuration.nix  ddper.nix  hardware-configuration.nix  home.nix
nixos/: configuration.nix  fonts.nix  (+5 more)
xmonad/.config/xmonad/my-xmonad/: my-xmonad.cabal
xmonad/.config/xmonad/my-xmonad/src/: MyXmonad.hs
xmonad/.config/xmonad/my-xmonad/src/MyXmonad/Dmenu/: Configs.hs
xmonad/.config/xmonad/my-xmonad/src/MyXmonad/Layout/: CenterMainFluid.hs
xmonad/.config/xmonad/my-xmonad/src/MyXmonad/Prompt/: Calculator.hs  Hoogle.hs  Prelude.hs
xmonad/.xmonad/: build  my-xmonad.cabal  prompt-history  xmonad.state
xmonad/.xmonad/app/: Main.hs
xmonad/.xmonad/src/: MyXmonad.hs
xmonad/.xmonad/src/MyXmonad/: Keybindings.hs  Layout.hs  Prompt.hs  Settings.hs
xmonad/.xmonad/src/MyXmonad/Util/Dmenu/: Configs.hs  Prompts.hs
xmonad/.xmonad/src/MyXmonad/Util/Prompt/: Calculator.hs  Hoogle.hs  Prelude.hs
(+485 files in other folders)
