name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:      >= 1.8

library
  exposed-modules: 
    MyXmonad
    MyXmonad.Prompt.Prelude
    MyXmonad.Prompt.Hoogle
    MyXmonad.Prompt.Calculator
    MyXmonad.Layout.CenterMainFluid
    MyXmonad.Dmenu.Configs
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , X11
                     , X11-xft
                     , containers
                     , directory
  hs-source-dirs:
    src
  ghc-options:         -Wall -fno-warn-missing-signatures
  default-language:    Haskell2010


executable xmonad
  main-is:             Main.hs
  hs-source-dirs:      app
  other-modules:
  build-depends:     base
                   , my-xmonad
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
